add: Responsive modal size  on mobile screen

--- a/style.css
+++ b/style.css
@@ -182,3 +182,10 @@ body {
 .hidden {
     display: none;
 }
+
+@media screen and (max-width: 780px) {
+	.modal {
+        width: 340px;
+        margin-top: 740px;
+    }
+}
