--- a/style.css
+++ b/style.css
@@ -154,6 +154,13 @@ body {
     position: relative;
 }
 
+.modal-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+    width: fit-content;
+}
+
 .modal {
     display: flex;
     position: fixed;
@@ -164,11 +171,12 @@ body {
     padding: 1.3rem;
     min-height: 100px;
     margin-top: 50%;
-    background-color: white;
+    background-color: rgba(0, 49, 53, 0.8);
     border: 1px solid #ddd;
     border-radius: 15px;
     z-index: 6;
     font-family: 'Poppins', sans-serif;
+    color: #30CFD0;
 }
 
 .modal h1 {
@@ -191,9 +199,11 @@ body {
 .modal input {
     padding: 0.7rem 1rem;
     border: 1px solid #ddd;
+    background: #ffffff;
     border-radius: 5px;
     font-size: 0.9em;
-    display: block;
+    display: inline-block;
+    color: #070707;
     min-width: 92%;
     margin-bottom: .5rem;
 }
@@ -206,10 +216,7 @@ body {
 
 .modal table {
     width: 100%;
-    border: 1px solid #222;
-    /* border-top: 1px solid #222; */
     padding-left: .5rem;
-    border-radius: 11px;
 }
 
 .modal table td {
@@ -231,7 +238,7 @@ body {
     padding: 0.8rem 1.4rem;
     font-weight: 700;
     background-color: black;
-    color: white;
+    color: #30CFD0;
     border-radius: 5px;
     text-align: center;
     font-size: 1rem;
@@ -240,7 +247,8 @@ body {
 
 .btn-close {
     padding: 0.5rem 0.7rem;
-    background: #eeeeee;
+    color: #30CFD0;
+    background: #070707;
     border-radius: 50%;
 }
 
@@ -291,9 +299,17 @@ body {
 @media screen and (max-width: 780px) {
 	.modal {
         width: 340px;
-        margin-top: 740px;
+        margin-top: 790px;
+        height: 45rem;
     }
     .judul {
         font-size: 1.21rem;
+    }
+    .modal-grid {
+        display: flex;
+        flex-direction: column;
+        width: 20rem;
+        right: 10%;
+        position: fixed;
     }
 }
