--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* __________________________Font import__________________________ */
 @import url('https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
@@ -36,7 +37,7 @@ body {
 }
 
 
-/* __Swiper Style__ */
+/* __________________________Swiper Style__________________________ */
 .swiper {
     width: 100%;
     padding-top: 50px;
@@ -55,7 +56,7 @@ body {
     width: 100%;
 }
 
-/* __Card Style__ */
+/* __________________________Card Style__________________________ */
 .card {
     position: flex;
     overflow: hidden;
@@ -144,7 +145,7 @@ body {
     cursor: pointer;
 }
 
-/* __Modal Style__ */
+/* __________________________Modal Style__________________________ */
 .container-modal {
     display: flex;
     flex-direction: column;
@@ -279,7 +280,7 @@ body {
     display: none;
 }
 
-/* Embed JSON style */
+/* __________________________Embed JSON style__________________________ */
 #show-json-from-git {
     background: black;
     color: white;
@@ -316,7 +317,7 @@ body {
     cursor: pointer;
 }
 
-/* Form input style */
+/* __________________________Form input style__________________________ */
 .modal-grid {
     display: flex;
     flex-direction: column;
@@ -346,10 +347,11 @@ body {
     display: block;
 }
 
-/* some General style */
+/* __________________________some General style__________________________ */
 #form-input input {
     border: 1px solid aqua;
     background: rgb(0, 43, 56);
+    color: aqua;
 }
 
 input[type=file] {
@@ -368,6 +370,7 @@ label[for='song'] {
     display: block;
     border-radius: 5px;
     background: rgb(0, 43, 56);
+    cursor: pointer;
 }
 
 #form-input #saveNew {
@@ -381,7 +384,7 @@ label[for='song'] {
     font-size: 18px;
 }
 
-/* Responsive query */
+/* __________________________Responsive query__________________________ */
 @media screen and (max-width: 780px) {
 	.modal {
         width: 340px;
