--- a/style.css
+++ b/style.css
@@ -382,6 +382,7 @@ label[for='song'] {
     color: rgb(0, 20, 26);
     font-weight: bold;
     font-size: 18px;
+    cursor: pointer;
 }
 
 /* __________________________Responsive query__________________________ */
