--- a/style.css
+++ b/style.css
@@ -400,6 +400,17 @@ label[for='songUp'] {
     cursor: pointer;
 }
 
+#upFileForm button {
+    display: inline;
+    border: none;
+    font-size: large;
+    background: aqua;
+    color: rgb(0, 20, 26);
+    border-radius: 8px;
+    padding: .5rem 1.3rem;
+    cursor: pointer;
+}
+
 /* __________________________Responsive query__________________________ */
 @media screen and (max-width: 780px) {
 	.modal {
